; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_array.c_t2.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_array.c_t2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @t2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @t2() #0 {
  %1 = alloca [2 x [3 x i32]], align 16
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = getelementptr inbounds [2 x [3 x i32]], [2 x [3 x i32]]* %1, i64 0, i64 0
  %5 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 1
  %6 = bitcast [3 x i32]* %5 to i32*
  store i32* %6, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  store i32 1, i32* %7, align 4
  %8 = getelementptr inbounds [2 x [3 x i32]], [2 x [3 x i32]]* %1, i64 0, i64 0
  %9 = bitcast [3 x i32]* %8 to i32*
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %2, align 8
  store i32 32, i32* %10, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 3
  %13 = load i32, i32* %12, align 4
  %14 = call i32 (i32, i32, ...) bitcast (i32 (...)* @expect to i32 (i32, i32, ...)*)(i32 32, i32 %13)
  ret void
}

declare dso_local i32 @expect(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
